2007-??-??: 1.13
	fixed bug with local variable masking package in catch type
	fixed "Not_found" when enum params differs

2007-03-06: 1.12
	added flash lite support with -D flash_lite
	bugfix for Unknown<X> should Unknown<X>
	prevent some exceptions in neko.net.ProxyDetect
	fixed ByteArray serialization
	added neko.Int32
	added -x for fast neko scripting
	prevent locals from breaking class access (works with imports)
	fix in function overriding subtyping
	added haxe.remoting.FlashJsConnection
	fixed tar support in neko.zip.File
	ide completion support using --display
	give access to neko.net.Host ip (as Int32)
	fixed bug when calling super.UpperCaseMethod()
	hide additional flash Array methods
	allow leading comma in anonymous types
	added haxe.Public interface
	added AS3 code generator
	field lookup gives priority to superclass over interfaces
	improved haxedoc output
	fixed bug in neko regexp split/replace when empty match at eol
	fixed bug in flash 6-7-8 resources generation

2007-01-28: 1.11
	changed StringBuf.add implementation
	added haxe.Firebug
	allowed variable return type for overriden/implemented methods
	display error position in front of each error line
	improved error messages when optional arguments not matched
	added neko.io.Path
	added neko.net.ProxyDetect
	bugfix in unify : prevent recursive anonymous objects
	haxe.Http call "prepare" only if size is known
	added multiple expressions in "case"
	serialization : deprecated old string format, use urlEncode/Decode
	added flash9 bytearray serialization (to binary string, for neko com)
	fixed Type.typeof on some flash9 instances
	no more dontUseCache (haxe.Serializer.USE_CACHE, default to false)
	small genxml/haxedoc improvements
	added Type.enumEq
	local function parameters are now inferred in several cases
	optional RTTI for Spod Object
	bugfix related to callback in neko code generator
	more type error stack (now includes type parameters)
	type system fixes in anonymous subtyping